# zephyr

./: CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  MAINTAINERS.yml  west.yml
.github/workflows/: clang.yaml
arch/: Kconfig
arch/arm64/core/: mmu.c
arch/riscv/core/: thread.c
arch/x86/: gen_mmu.py
arch/x86/core/: fatal.c  ia32.cmake  userspace.c  x86_mmu.c
arch/x86/include/: x86_mmu.h
arch/xtensa/: Kconfig
arch/xtensa/core/: CMakeLists.txt  exc_stubs.S  gdbstub.c  ptables.c  syscall_helper.c  thread.c  userspace.S  xtensa-asm2-util.S
arch/xtensa/include/: kernel_arch_func.h  xtensa_mmu_priv.h
boards/arm/mimxrt685_evk/: mimxrt685_evk_cm33.dts
boards/posix/native_posix/: irq_ctrl.c
boards/x86/qemu_x86/: Kconfig.defconfig  board.cmake  qemu_x86_tiny.ld  qemu_x86_tiny_defconfig
boards/xtensa/qemu_xtensa/: qemu_xtensa_call0.conf  qemu_xtensa_mmu_call0.conf  revision.cmake
cmake/bintools/gnu/: ld_version.cmake  target.cmake
cmake/bintools/llvm/: target.cmake
cmake/linker/: linker_flags_template.cmake
doc/releases/: release-notes-4.5.rst
doc/services/: memory_management.rst
drivers/clock_control/: clock_control_mcux_syscon.c
drivers/ethernet/: eth_sam_gmac.c
drivers/i3c/: CMakeLists.txt  Kconfig  Kconfig.i2c_virtual_controller  Kconfig.nxp  i3c_common.c  i3c_handlers.c  i3c_i2c_virtual_controller.c  i3c_mcux.c
dts/xtensa/: dc233c.dtsi
extra_obj_files/: CMakeLists.txt  objfile.c
include/: kernel.h
include/app_memory/: app_memdomain.h
include/kernel/: thread_stack.h
include/toolchain/: gcc.h
include/zephyr/: kernel.h
kernel/: CMakeLists.txt  Kconfig  atomic_c.c  banner.c  cache_handlers.c  compiler_stack_protect.c  condvar.c  device.c  errno.c  fatal.c  futex.c  idle.c  init.c  kheap.c  mailbox.c  mem_domain.c  mem_slab.c  mempool.c  mmu.c  msg_q.c  mutex.c  pipes.c  poll.c  queue.c  sched.c  sem.c  smp.c  stack.c  system_work_q.c  thread.c  timeout.c  timer.c  userspace.c  userspace_handler.c  version.c  work.c  xip.c
kernel/core/: CMakeLists.txt  Kconfig
kernel/include/: kernel_arch_interface.h  kernel_internal.h
kernel/ipc/: CMakeLists.txt  Kconfig
kernel/memory/: CMakeLists.txt  Kconfig
kernel/misc/: CMakeLists.txt  Kconfig
kernel/paging/: statistics.c
kernel/timing/: CMakeLists.txt  Kconfig
scripts/: gen_syscalls.py
submanifests/: optional.yaml
subsys/debug/: Kconfig  gdbstub.c  thread_analyzer.c
subsys/ipc/: CMakeLists.txt  Kconfig
subsys/logging/: log_core.c  log_output.c
subsys/usb/: bos.c
(+178 files in other folders)
